--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jwt-decode": "^4.0.0",
     "pinia": "^2.1.4",
     "pinia-plugin-persistedstate": "^3.2.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4"
   },
