--- a/.env
+++ b/.env
@@ -3,8 +3,7 @@ VITE_OPEN_API_SERVICE_KEY=Re2Sf0m3tgzrHPpSBKHRQcUDuXEULB68rE4xuBgooEyIIfzlid+4pZ
 VITE_KAKAO_MAP_SERVICE_KEY=33372345abdbd7032a976a771c821db8 
 
 # API URL settings for PJT
-VITE_VUE_API_URL=http://localhost/vue
-VITE_ELECTRIC_CHARGING_STATION_URL=https://apis.data.go.kr/B552584/EvCharger/getChargerInfo
+VITE_VUE_API_URL=http://localhost:8080
 
 # count per page
 VITE_ARTICLE_LIST_SIZE=20
