feat: 프로필 수정시, 이름만 수정해도 변경가능하도록

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -24,18 +24,18 @@ spring:
   redis:
     host:
     port:
-#  cloud:
-#    aws:
-#      s3:
-#        bucket: <S3 버킷 이름>
-#      credentials:
-#        access-key: <저장해놓은 액세스 키>
-#        secret-key: <저장해놓은 비밀 액세스 키>
-#      region:
-#        static: ap-northeast-2
-#        auto: false
-#      stack:
-#        auto: false
+cloud:
+  aws:
+    s3:
+      bucket: <S3 버킷 이름>
+    credentials:
+      access-key: <저장해놓은 액세스 키>
+      secret-key: <저장해놓은 비밀 액세스 키>
+    region:
+      static: ap-northeast-2
+      auto: false
+    stack:
+      auto: false
 
 logging:
   level:
