--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencies {
     implementation "com.querydsl:querydsl-core:${queryDslVersion}"
 
     //S3
-//    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+    implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 }
 
 //querydsl 추가 시작
