modify: 게시글 상세보기 dto로 변환 후 리턴

--- a/build.gradle
+++ b/build.gradle
@@ -56,7 +56,8 @@ dependencies {
     //S3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
-
+    //이메일 인증
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.0.5'
 }
 
 //querydsl 추가 시작
