--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -36,6 +36,22 @@ cloud:
       auto: false
     stack:
       auto: false
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username:
+    password:
+    properties:
+      mail:
+        smtp:
+          auth: true
+          starttls:
+            enable: true
+            required: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+    auth-code-expiration-millis: 1800000  # 30 * 60 * 1000 == 30분
 
 logging:
   level:
