--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -62,6 +62,10 @@ logging:
           descriptor:
             sql:
               BasicBinder: TRACE
+    com:
+      amazonaws:
+        util:
+          EC2MetadataUtils: error
 ### 환경변수
 jwt:
   secret:
